src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__nested_if_with_missing_end_if.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token [KeywordEndIf, KeywordElseIf, KeywordElse]
  ┌─ <internal>:7:9
  │
7 │         END_PROGRAM
  │         ^^^^^^^^^^^ Missing expected Token [KeywordEndIf, KeywordElseIf, KeywordElse]

error[E007]: Unexpected token: expected KeywordEndIf but found 'END_PROGRAM'
  ┌─ <internal>:7:9
  │
7 │         END_PROGRAM
  │         ^^^^^^^^^^^ Unexpected token: expected KeywordEndIf but found 'END_PROGRAM'
